--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://dyl-kh.github.io/portfolio",
+  "homepage": "https://dylankhan.com",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
